--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Paradigm Shift by HTML5 UP</title>
+		<link rel="canonical" href="https://candid-belekoy-db4327.netlify.app/">
+		<meta name="apple-mobile-web-app-capable" content="yes">
+ 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
+ 		<meta name="apple-mobile-web-app-title" content="edson iOS">
+ 		<link rel="apple-touch-icon" href="images/icons/icon-152x152.png">
+ 		<link rel="manifest" href="manifest.json" /> 
+
+		<title>Projeto 2 - Mobile - PWA</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="" />
@@ -9,6 +16,24 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="is-preload">
+
+		<script>
+
+			if ("serviceWorker" in navigator) {
+			 if (navigator.serviceWorker.controller) {
+			 console.log("[PWA Builder] active service worker found, no need to register");
+			 } else {
+
+			 navigator.serviceWorker
+			 .register("pwabuilder-sw.js", {
+			 scope: "./"
+			 })
+			 .then(function (reg) {
+			 console.log("[PWA Builder] Service worker has been registered for scope: " + reg.scope);
+			 });
+			 }
+			}
+			</script>
 
 		<!-- Wrapper -->
 			<div id="wrapper">
